--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,7 @@
 }
 .card-main-container {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: nowrap;
+  gap: 200px;
+  overflow-x: auto;
 }
