--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,11 @@
   position: absolute;
   left: 6px;
   top: 6px;
+  background: #fff;
+  padding: 4px 8px;
+  font-weight: bold;
+  border-radius: 2px;
+  border: none;
 }
 .star-img {
   width: 14px;
