--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,19 @@
   margin: 0;
   padding: 0;
 }
+body {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ccc;
+}
+.container {
+  width: 550px;
+  background: #fff;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
 .hero-container {
   padding: 40px;
 }
@@ -26,6 +39,7 @@
 }
 .photo-grid {
   margin-bottom: 40px;
+  width: 400px;
 }
 .hero-title {
   font-size: 36px;
@@ -38,17 +52,18 @@
   font-size: 16px;
   font-weight: 300;
   line-height: 110%;
+  width: 320px;
 }
+
 .card-container {
-  padding: 40px;
+  padding-right: 18px;
 }
 .card-sub-container {
   position: relative;
-  width: 300px;
 }
 .card--img {
-  height: 300px;
-  width: 100%;
+  width: 176px;
+  height: 235px;
   border-radius: 9px;
   margin-bottom: 9px;
 }
